--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "dependencies": {
     "axios": "^0.26.1",
     "bootstrap": "4.6.0",
+    "jwt-decode": "^3.1.2",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.2.1",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "saas": "^1.0.0",
     "sass": "^1.49.9"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.14",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "json-server": "^0.17.0",
